admin/themes/default/theme.css
/* ... */
.move-cat-container .move-cat-toogler {
  display: flex;
  color: #FFBD4D;
  margin-left: 5px;
  align-items: center;
  cursor: pointer;
  z-index: 2;
  font-weight: 600;
}

.move-cat-container .move-cat-toogler .icon-left-open{
  transform: rotate(180deg);
}
.move-cat-container .move-cat-toogler{
  color: #ff7700;
  transform: scale(1.4);
}

.move-cat-action-cont {
  display: none;
  position: absolute;
  right: 50%;
  top : 50%;
  width: 100%;
  height: 100%;
  border-radius: 5px;
  transform: translate(50%, -50%);
  align-items: center;
  flex-direction: row-reverse;
  overflow: hidden;
}

.move-cat-container:hover .move-cat-action-cont {
  display: flex;
}

.move-cat-action {
  display: flex;
  align-items: center;
  max-width: 60%;
}

.move-cat-action a {
  padding: 30px 10px;
  font-weight: bold;
  cursor: pointer;
  height: 100%;
  text-align: center;
  transform: scale(1.2);
}

.move-cat-action a:last-child {
  padding-right: 20px;
}

.move-cat-action a:hover {
  color: #ff7700;
  text-decoration: none;
}

.cat-move-order-popin {
  position: fixed;
  z-index: 100;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0,0,0,0.7);
  display: none;
}

.cat-move-order-popin .order-popin-container {
  background-color: #f3f3f3;
  border-radius: 10px;
  display: block;
  width: 25%;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -48%);
  text-align: left;
  padding: 30px;
  min-width: 360px;
}

.cat-move-order-popin .popin-title .icon-sort-name-up::before {
  display:inline !important;
}
.cat-move-order-popin .popin-title .icon-sort-name-up, .cat-move-order-popin .popin-title-text {
  display:inline-block;
}
.cat-move-order-popin .popin-title-text::first-letter {
  text-transform: capitalize;
}

.cat-move-order-popin .album-name {
  font-size: 14px;
  color: #3C3C3C;
  font-weight: 600;
  text-align: center;
}

.cat-move-order-popin .choice-container {
  display: flex;
  flex-direction: column;
  padding: 10px 5px;
}

.cat-move-order-popin label {
  position: relative;
  padding: 5px;
}

.cat-move-order-popin input[type=radio] {
  opacity: 0;
}

.cat-move-order-popin input[type=submit] {
  width: 100%;
  margin: 10px 0px;
}

.cat-move-order-popin input[name=recursiveAutoOrder] {
  background-color: #d9d9d9;
}

.cat-move-order-popin input[name=recursiveAutoOrder]:hover {
  background-color: #ffc17e;
}

.cat-move-order-popin .close-popin {
  position: absolute;
  right: -40px;
  top: -40px;
  font-size: 30px;
  color: white;
}

.cat-move-order-popin .close-popin:hover { color: #ffa646;}

.popin-title {font-weight: bold; font-size: 15px; margin-bottom: 15px; color: #3C3C3C; white-space: nowrap;}

.popin-title span {
  padding: 7px;
  border-radius: 25px;
  font-size: 15px;
  margin-right: 10px; 
}

/*Overwrite JQtree CSS*/

.jqtree_common {
  margin: 20px 0px !important;
}

li.jqtree-ghost {
  display: flex !important;
  margin: 0 !important;
}

ul.jqtree-tree ul.jqtree_common {
  margin-left: 50px !important;
}

ul.jqtree-tree span.jqtree-border {
  border: solid 2px #FFBD4D !important;
  width: 98%;
}

ul.jqtree-tree li.jqtree-ghost span.jqtree-circle {
  border: solid 2px #FFBD4D !important;
  margin: 0 !important;
}

ul.jqtree-tree li.jqtree-ghost span.jqtree-line {
  background-color: #FFBD4D !important;
  position: relative !important;
  height: 2px !important;
  margin: 0 !important;
}

ul.jqtree-tree .jqtree-element {
  cursor: move !important;
}

.albumBlock {display: flex; justify-content: space-between; padding: 10px 10px 0 10px;}
.albumBlock .albumLineBlock {display: block; padding-left: 7px; max-width: 45%; height: 50px;}
.showCreateAlbum {text-align:left; margin:0 1em 25px 20px; line-height:22px;}
.showCreateAlbum .userSeparator {margin:0 5px;}
#addAlbumOpen, #autoOrderOpen {padding: 7px 15px; font-weight: bold; font-size: 11px;}
.afterUploadActions {text-align: center; margin-bottom: 30px !important; margin-top: 45px !important;}
.afterUploadActions a {justify-content: center; margin: 35px; font-weight: bold; font-size: 14px; padding: 10px 12px;}
#autoOrder p, #createAlbum p {text-align:left; margin:0 0 1em 0;}
#autoOrder p.actionButtons, #createAlbum p.actionButtons {margin-bottom:0;}

#ftpPage p {text-align:left;margin:1em;}
#ftpPage fieldset p {margin:0;}

/* watermark configuration screen */
#watermarkPositionBox {
  width:500px;
  padding:5px;
}

#watermarkPositionBox label {
  font-weight:normal;
  display:block;
}

#watermarkPositionBox label.middle {
  margin:50px;
  text-align:center;
}

#watermarkPositionBox label.right {
  float:right;
}

#positionCustomDetails {
  margin-left:20px;
  display:none;
}

#positionCustomDetails label {
  font-weight:normal;
}

input[type="text"].dError {border-color:#ff7070; background-color:#FFe5e5;}
.dErrorDesc {background-color:red; color:white; padding:0 5px;border-radius:10px; font-weight:bold;cursor:help;}

#wImg {max-height:100px;border:2px solid #ccc;margin-top:5px;}
#addWatermark {display:none;}

.adminMenubarCounter {
  background-color:#666;
  color:white;
  padding:1px 5px;
  border-radius:10px;
  -moz-border-radius:10px;
  -webkit-border-radius:10px;
  margin-left:5px;
}

 .content .groups form{
  margin:0;
  margin-top: 115px;
}

.groups {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.group-manager{
  margin-right:224px;
}

.remove-item {
  flex: 1;
  -webkit-animation: flexShrink 500ms ease forwards;
  -o-animation: flexShrink 500ms ease forwards;
  animation: flexShrink 500ms ease forwards;
}

.groups .list_user #text{
  width:100%;
}

.groups .GroupContainer {
  vertical-align: middle;
  position: relative;
  display: flex;
  flex-direction: column;
  text-align: left;
  height: 286px;
  width: 220px;
  margin: 15px;
  border-radius: 10px;
  align-items: center;
  justify-content: space-between;
}

.groupHeader {
  width: 100%;
}
/* ... */

